// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Heading > Accessibility > matches snapshot with accessibility props > accessibility 1`] = `
<div>
  <h2
    aria-label="Accessibility Test"
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
    id="a11y-test"
  >
    A11y
  </h2>
</div>
`;

exports[`Heading > Align Variants > matches snapshot for each align > align-center 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-center_530457"
    data-testid="Heading"
  >
    Align 
    center
  </h2>
</div>
`;

exports[`Heading > Align Variants > matches snapshot for each align > align-left 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Align 
    left
  </h2>
</div>
`;

exports[`Heading > Align Variants > matches snapshot for each align > align-right 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-right_530457"
    data-testid="Heading"
  >
    Align 
    right
  </h2>
</div>
`;

exports[`Heading > Basic Rendering > matches snapshot for default props 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Test Heading
  </h2>
</div>
`;

exports[`Heading > Combined Props > matches snapshot for combined props > combined-props 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--size-4xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
    id="combined-test"
  >
    Combined Props Test
  </h2>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-1 1`] = `
<div>
  <h1
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    1
  </h1>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-2 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    2
  </h2>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-3 1`] = `
<div>
  <h3
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    3
  </h3>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-4 1`] = `
<div>
  <h4
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    4
  </h4>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-5 1`] = `
<div>
  <h5
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    5
  </h5>
</div>
`;

exports[`Heading > Heading Levels > matches snapshot for each level > level-6 1`] = `
<div>
  <h6
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Level 
    6
  </h6>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-2xl 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--size-2xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    2xl
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-3xl 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--size-3xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    3xl
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-4xl 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--size-4xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    4xl
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-5xl 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--size-5xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    5xl
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-l 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--l_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    l
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-m 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    m
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-s 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--s_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    s
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-xl 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--xl_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    xl
  </h2>
</div>
`;

exports[`Heading > Size Variants > matches snapshot for each size > size-xs 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--xs_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Size 
    xs
  </h2>
</div>
`;

exports[`Heading > Theme Variants > matches snapshot for each theme > theme-error 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-error_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Theme 
    error
  </h2>
</div>
`;

exports[`Heading > Theme Variants > matches snapshot for each theme > theme-gradient 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-gradient_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Theme 
    gradient
  </h2>
</div>
`;

exports[`Heading > Theme Variants > matches snapshot for each theme > theme-inverted 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-inverted_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Theme 
    inverted
  </h2>
</div>
`;

exports[`Heading > Theme Variants > matches snapshot for each theme > theme-muted 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-muted_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Theme 
    muted
  </h2>
</div>
`;

exports[`Heading > Theme Variants > matches snapshot for each theme > theme-primary 1`] = `
<div>
  <h2
    class="_heading_530457 _heading--m_530457 _heading--theme-primary_530457 _heading--align-left_530457"
    data-testid="Heading"
  >
    Theme 
    primary
  </h2>
</div>
`;
